k8s-templates/app.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bitcoin-tracker-a
  labels:
    app: bitcoin-tracker-A
spec:
  containers:
    - image: "omer21104/my-repo:v1.0.3"
      # - image: "omerregistery1.azurecr.io/bitcoin-tracker:v1.0.3"
      name: bitcoin-tracker-pod
      ports:
        - containerPort: 3000
          protocol: TCP
      livenessProbe:
        httpGet:
          path: /health
          port: 3000
        initialDelaySeconds: 3
        periodSeconds: 5
      readinessProbe:
        httpGet:
          path: /ready
          port: 3000
        initialDelaySeconds: 3
        periodSeconds: 5

---
apiVersion: v1
kind: Pod
metadata:
  name: bitcoin-tracker-b
  labels:
    app: bitcoin-tracker-B
spec:
  containers:
    - image: "omer21104/my-repo:v1.0.3"
      # - image: "omerregistery1.azurecr.io/bitcoin-tracker:v1.0.3"
      name: bitcoin-tracker-pod
      ports:
        - containerPort: 3000
          protocol: TCP
      livenessProbe:
        httpGet:
          path: /health
          port: 3000
        initialDelaySeconds: 3
        periodSeconds: 5
      readinessProbe:
        httpGet:
          path: /ready
          port: 3000
        initialDelaySeconds: 3
        periodSeconds: 5

---
apiVersion: v1
kind: Service
metadata:
  name: bitcoin-tracker-svc-a
spec:
  selector:
    app: bitcoin-tracker-A
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: bitcoin-tracker-svc-b
spec:
  selector:
    app: bitcoin-tracker-B
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bitcoin-tracker-ingress
  # annotations:
  #   kubernetes.io/ingress.class: azure/application-gateway
spec:
  ingressClassName: azure-application-gateway
  rules:
    - http:
        paths:
          - path: /service-A
            backend:
              service:
                name: bitcoin-tracker-svc-a
                port:
                  number: 80
            pathType: Prefix
          - path: /service-B
            backend:
              service:
                name: bitcoin-tracker-svc-b
                port:
                  number: 80
            pathType: Prefix

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-service-a-to-service-b
spec:
  podSelector:
    matchLabels:
      app: bitcoin-tracker-A
  policyTypes:
    - Ingress
    - Egress
